syntax = "proto3";

package pb;
option go_package = "internal/module/book-service/pb";
import "base/base.proto";
import "google/protobuf/timestamp.proto";

service BookService {
  rpc CreateBookShelf(CreateBookShelfRequest)
      returns (CreateBookShelfResponse) {}
  rpc UpdateBookShelf(UpdateBookShelfRequest)
      returns (UpdateBookShelfResponse) {}
  rpc ListBookShelf(ListBookShelfRequest) returns (ListBookShelfResponse) {}
  rpc CreateBook(CreateBookRequest) returns (CreateBookResponse) {}
  rpc CreateBookPosition(CreateBookPositionRequest)
      returns (CreateBookPositionResponse) {}
  rpc UpdateBookPosition(UpdateBookPositionRequest)
      returns (UpdateBookPositionResponse) {}
  rpc ListBook(ListBookRequest) returns (ListBookResponse) {}
  rpc ListBookPosition(ListBookPositionRequest)
      returns (ListBookPositionResponse) {}
  rpc BorrowBook(BorrowBookRequest) returns (BorrowBookResponse) {}
  rpc ReturnBook(ReturnBookRequest) returns (ReturnBookResponse) {}
  rpc ListBookBorrowReturn(ListBookBorrowReturnRequest)
      returns (ListBookBorrowReturnResponse) {}
}

message CreateBookRequest {
  string isbn = 1;
  string name = 2;
  string desc = 3;
  string cover = 4;
  repeated string author = 5;
  repeated string translator = 6;
  string publishing_house = 7;
  string edition = 8;
  string printed_times = 9;
  string printed_sheets = 10;
  string format = 11;
  int64 word_count = 12;
  double pricing = 13;
  double purchase_price = 14;
  google.protobuf.Timestamp purchase_time = 15;
  string purchase_source = 16;
}

message CreateBookResponse { int64 id = 1; }

message CreateBookShelfRequest {
  string name = 1;
  int32 layerNum = 2;
  int32 partition_num = 3;
}

message CreateBookShelfResponse { int64 id = 1; }
message UpdateBookShelfRequest {
  int64 id = 1;
  string name = 2;
}
message UpdateBookShelfResponse { int64 id = 1; }

message CreateBookPositionRequest {
  int64 book_shelf_id = 1;
  int64 book_id = 2;
  int32 layer = 3;
  int32 partition = 4;
}
message CreateBookPositionResponse { int64 id = 1; }

message UpdateBookPositionRequest {
  int64 id = 1;
  int64 book_shelf_id = 2;
  int32 layer = 3;
  int32 partition = 4;
}
message UpdateBookPositionResponse { int64 id = 1; }

message BorrowBookRequest {
  int64 book_id = 1;
  int64 uid = 2;
}
message BorrowBookResponse { int64 id = 1; }

message ReturnBookRequest {
  int64 book_id = 1;
  int64 uid = 2;
}
message ReturnBookResponse { int64 id = 1; }

message ListBookShelfRequest { base.SearchParam search_param = 1; }

message ListBookShelfResponse {
  int64 total_count = 1;
  repeated BookShelf edges = 2;
}

message ListBookRequest { base.SearchParam search_param = 1; }

message ListBookResponse {
  int64 total_count = 1;
  repeated Book edges = 2;
}

message BookShelf {
  int64 id = 1;
  string name = 2;
  int32 layerNum = 3;
  int32 partition_num = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message Book {
  int64 id = 1;
  string isbn = 2;
  string name = 3;
  string desc = 4;
  string cover = 5;
  repeated string author = 6;
  repeated string translator = 7;
  string publishing_house = 8;
  string edition = 9;
  string printed_times = 10;
  string printed_sheets = 11;
  string format = 12;
  int64 word_count = 13;
  double pricing = 14;
  double purchase_price = 15;
  google.protobuf.Timestamp purchase_time = 16;
  string purchase_source = 17;
  int64 book_borrow_uid = 18;
  google.protobuf.Timestamp created_at = 19;
  google.protobuf.Timestamp updated_at = 20;
}

message ListBookPositionRequest {
  base.SearchParam search_param = 1;
  optional int64 bookID = 2;
  optional int64 bookShelfID = 3;
}

message ListBookPositionResponse {
  int64 total_count = 1;
  repeated BookPosition edges = 2;
}

message BookPosition {
  int64 id = 1;
  int64 bookShelfID = 2;
  BookShelf bookShelf = 3;
  int64 bookID = 4;
  Book book = 5;
  uint32 layer = 6;
  uint32 partition = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message ListBookBorrowReturnRequest {
  base.SearchParam search_param = 1;
  optional int64 bookID = 2;
}

message ListBookBorrowReturnResponse {
  int64 total_count = 1;
  repeated BookBorrowReturn edges = 2;
}

message BookBorrowReturn {
  int64 id = 1;
  int64 book_id = 2;
  int64 uid = 3;
  int32 operation = 4;
  Book book = 5;
  google.protobuf.Timestamp created_at = 6;
}
